python_modules/dagster/dagster/_core/definitions/asset_selection/AssetSelectionParser.py
# Generated from AssetSelection.g4 by ANTLR 4.13.2
# encoding: utf-8
import sys

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class AssetSelectionParser(Parser):
    grammarFileName = "AssetSelection.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'='",
        "'and'",
        "'or'",
        "'not'",
        "'*'",
        "'+'",
        "':'",
        "'('",
        "')'",
        "','",
        "'owner'",
        "'group'",
        "'tag'",
        "'kind'",
        "'repo'",
        "'sinks'",
        "'roots'",
    ]

    symbolicNames = [
        "<INVALID>",
        "EQUAL",
        "AND",
        "OR",
        "NOT",
        "STAR",
        "PLUS",
        "COLON",
        "LPAREN",
        "RPAREN",
        "COMMA",
        "OWNER",
        "GROUP",
        "TAG",
        "KIND",
        "REPO",
        "SINKS",
        "ROOTS",
        "QUOTED_STRING",
        "UNQUOTED_STRING",
        "WS",
    ]

    RULE_expr = 0
    RULE_primaryExpr = 1
    RULE_traversal = 2
    RULE_functionName = 3
    RULE_keyValueExpr = 4
    RULE_value = 5
    RULE_arguments = 6
    RULE_assetExpr = 7

    ruleNames = [
        "expr",
        "primaryExpr",
        "traversal",
        "functionName",
        "keyValueExpr",
        "value",
        "arguments",
        "assetExpr",
    ]

    EOF = Token.EOF
    EQUAL = 1
    AND = 2
    OR = 3
    NOT = 4
    STAR = 5
    PLUS = 6
    COLON = 7
    LPAREN = 8
    RPAREN = 9
    COMMA = 10
    OWNER = 11
    GROUP = 12
    TAG = 13
    KIND = 14
    REPO = 15
    SINKS = 16
    ROOTS = 17
    QUOTED_STRING = 18
    UNQUOTED_STRING = 19
    WS = 20

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class ExprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return AssetSelectionParser.RULE_expr

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class AndExpressionContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(AssetSelectionParser.ExprContext)
            else:
                return self.getTypedRuleContext(AssetSelectionParser.ExprContext, i)

        def AND(self):
            return self.getToken(AssetSelectionParser.AND, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAndExpression"):
                listener.enterAndExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAndExpression"):
                listener.exitAndExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAndExpression"):
                return visitor.visitAndExpression(self)
            else:
                return visitor.visitChildren(self)

    class ToPrimaryExpressionContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def primaryExpr(self):
            return self.getTypedRuleContext(AssetSelectionParser.PrimaryExprContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterToPrimaryExpression"):
                listener.enterToPrimaryExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitToPrimaryExpression"):
                listener.exitToPrimaryExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitToPrimaryExpression"):
                return visitor.visitToPrimaryExpression(self)
            else:
                return visitor.visitChildren(self)

    class NotExpressionContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(AssetSelectionParser.NOT, 0)

        def expr(self):
            return self.getTypedRuleContext(AssetSelectionParser.ExprContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterNotExpression"):
                listener.enterNotExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitNotExpression"):
                listener.exitNotExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitNotExpression"):
                return visitor.visitNotExpression(self)
            else:
                return visitor.visitChildren(self)

    class OrExpressionContext(ExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(AssetSelectionParser.ExprContext)
            else:
                return self.getTypedRuleContext(AssetSelectionParser.ExprContext, i)

        def OR(self):
            return self.getToken(AssetSelectionParser.OR, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterOrExpression"):
                listener.enterOrExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitOrExpression"):
                listener.exitOrExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOrExpression"):
                return visitor.visitOrExpression(self)
            else:
                return visitor.visitChildren(self)

    def expr(self, _p: int = 0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = AssetSelectionParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5, 6, 8, 11, 12, 13, 14, 15, 16, 17, 18, 19]:
                localctx = AssetSelectionParser.ToPrimaryExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 17
                self.primaryExpr()
                pass
            elif token in [4]:
                localctx = AssetSelectionParser.NotExpressionContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 18
                self.match(AssetSelectionParser.NOT)
                self.state = 19
                self.expr(3)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 30
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 28
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input, 1, self._ctx)
                    if la_ == 1:
                        localctx = AssetSelectionParser.AndExpressionContext(
                            self, AssetSelectionParser.ExprContext(self, _parentctx, _parentState)
                        )
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 22
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 23
                        self.match(AssetSelectionParser.AND)
                        self.state = 24
                        self.expr(3)
                        pass

                    elif la_ == 2:
                        localctx = AssetSelectionParser.OrExpressionContext(
                            self, AssetSelectionParser.ExprContext(self, _parentctx, _parentState)
                        )
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 25
                        if not self.precpred(self._ctx, 1):
                            from antlr4.error.Errors import FailedPredicateException

                            raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                        self.state = 26
                        self.match(AssetSelectionParser.OR)
                        self.state = 27
                        self.expr(2)
                        pass

                self.state = 32
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 2, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class PrimaryExprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return AssetSelectionParser.RULE_primaryExpr

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class AssetExpressionWithTraversalContext(PrimaryExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.PrimaryExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assetExpr(self):
            return self.getTypedRuleContext(AssetSelectionParser.AssetExprContext, 0)

        def traversal(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(AssetSelectionParser.TraversalContext)
            else:
                return self.getTypedRuleContext(AssetSelectionParser.TraversalContext, i)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAssetExpressionWithTraversal"):
                listener.enterAssetExpressionWithTraversal(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAssetExpressionWithTraversal"):
                listener.exitAssetExpressionWithTraversal(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAssetExpressionWithTraversal"):
                return visitor.visitAssetExpressionWithTraversal(self)
            else:
                return visitor.visitChildren(self)

    class KeyValueExpressionWithTraversalContext(PrimaryExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.PrimaryExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def keyValueExpr(self):
            return self.getTypedRuleContext(AssetSelectionParser.KeyValueExprContext, 0)

        def traversal(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(AssetSelectionParser.TraversalContext)
            else:
                return self.getTypedRuleContext(AssetSelectionParser.TraversalContext, i)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterKeyValueExpressionWithTraversal"):
                listener.enterKeyValueExpressionWithTraversal(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitKeyValueExpressionWithTraversal"):
                listener.exitKeyValueExpressionWithTraversal(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitKeyValueExpressionWithTraversal"):
                return visitor.visitKeyValueExpressionWithTraversal(self)
            else:
                return visitor.visitChildren(self)

    class ParenthesizedExpressionWithTraversalContext(PrimaryExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.PrimaryExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LPAREN(self):
            return self.getToken(AssetSelectionParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(AssetSelectionParser.ExprContext, 0)

        def RPAREN(self):
            return self.getToken(AssetSelectionParser.RPAREN, 0)

        def traversal(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(AssetSelectionParser.TraversalContext)
            else:
                return self.getTypedRuleContext(AssetSelectionParser.TraversalContext, i)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterParenthesizedExpressionWithTraversal"):
                listener.enterParenthesizedExpressionWithTraversal(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitParenthesizedExpressionWithTraversal"):
                listener.exitParenthesizedExpressionWithTraversal(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitParenthesizedExpressionWithTraversal"):
                return visitor.visitParenthesizedExpressionWithTraversal(self)
            else:
                return visitor.visitChildren(self)

    class FunctionCallExpressionContext(PrimaryExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.PrimaryExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionName(self):
            return self.getTypedRuleContext(AssetSelectionParser.FunctionNameContext, 0)

        def LPAREN(self):
            return self.getToken(AssetSelectionParser.LPAREN, 0)

        def arguments(self):
            return self.getTypedRuleContext(AssetSelectionParser.ArgumentsContext, 0)

        def RPAREN(self):
            return self.getToken(AssetSelectionParser.RPAREN, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFunctionCallExpression"):
                listener.enterFunctionCallExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFunctionCallExpression"):
                listener.exitFunctionCallExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFunctionCallExpression"):
                return visitor.visitFunctionCallExpression(self)
            else:
                return visitor.visitChildren(self)

    def primaryExpr(self):
        localctx = AssetSelectionParser.PrimaryExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_primaryExpr)
        self._la = 0  # Token type
        try:
            self.state = 61
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 9, self._ctx)
            if la_ == 1:
                localctx = AssetSelectionParser.KeyValueExpressionWithTraversalContext(
                    self, localctx
                )
                self.enterOuterAlt(localctx, 1)
                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 5 or _la == 6:
                    self.state = 33
                    self.traversal()

                self.state = 36
                self.keyValueExpr()
                self.state = 38
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input, 4, self._ctx)
                if la_ == 1:
                    self.state = 37
                    self.traversal()

                pass

            elif la_ == 2:
                localctx = AssetSelectionParser.AssetExpressionWithTraversalContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 5 or _la == 6:
                    self.state = 40
                    self.traversal()

                self.state = 43
                self.assetExpr()
                self.state = 45
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input, 6, self._ctx)
                if la_ == 1:
                    self.state = 44
                    self.traversal()

                pass

            elif la_ == 3:
                localctx = AssetSelectionParser.ParenthesizedExpressionWithTraversalContext(
                    self, localctx
                )
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la == 5 or _la == 6:
                    self.state = 47
                    self.traversal()

                self.state = 50
                self.match(AssetSelectionParser.LPAREN)
                self.state = 51
                self.expr(0)
                self.state = 52
                self.match(AssetSelectionParser.RPAREN)
                self.state = 54
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input, 8, self._ctx)
                if la_ == 1:
                    self.state = 53
                    self.traversal()

                pass

            elif la_ == 4:
                localctx = AssetSelectionParser.FunctionCallExpressionContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 56
                self.functionName()
                self.state = 57
                self.match(AssetSelectionParser.LPAREN)
                self.state = 58
                self.arguments()
                self.state = 59
                self.match(AssetSelectionParser.RPAREN)
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TraversalContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STAR(self):
            return self.getToken(AssetSelectionParser.STAR, 0)

        def PLUS(self, i: int = None):
            if i is None:
                return self.getTokens(AssetSelectionParser.PLUS)
            else:
                return self.getToken(AssetSelectionParser.PLUS, i)

        def getRuleIndex(self):
            return AssetSelectionParser.RULE_traversal

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTraversal"):
                listener.enterTraversal(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTraversal"):
                listener.exitTraversal(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitTraversal"):
                return visitor.visitTraversal(self)
            else:
                return visitor.visitChildren(self)

    def traversal(self):
        localctx = AssetSelectionParser.TraversalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_traversal)
        try:
            self.state = 69
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.match(AssetSelectionParser.STAR)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self._errHandler.sync(self)
                _alt = 1
                while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                    if _alt == 1:
                        self.state = 64
                        self.match(AssetSelectionParser.PLUS)

                    else:
                        raise NoViableAltException(self)
                    self.state = 67
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input, 10, self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionNameContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SINKS(self):
            return self.getToken(AssetSelectionParser.SINKS, 0)

        def ROOTS(self):
            return self.getToken(AssetSelectionParser.ROOTS, 0)

        def getRuleIndex(self):
            return AssetSelectionParser.RULE_functionName

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterFunctionName"):
                listener.enterFunctionName(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitFunctionName"):
                listener.exitFunctionName(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitFunctionName"):
                return visitor.visitFunctionName(self)
            else:
                return visitor.visitChildren(self)

    def functionName(self):
        localctx = AssetSelectionParser.FunctionNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_functionName)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            _la = self._input.LA(1)
            if not (_la == 16 or _la == 17):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class KeyValueExprContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def getRuleIndex(self):
            return AssetSelectionParser.RULE_keyValueExpr

        def copyFrom(self, ctx: ParserRuleContext):
            super().copyFrom(ctx)

    class RepoKeyValuePairContext(KeyValueExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.KeyValueExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def REPO(self):
            return self.getToken(AssetSelectionParser.REPO, 0)

        def COLON(self):
            return self.getToken(AssetSelectionParser.COLON, 0)

        def value(self):
            return self.getTypedRuleContext(AssetSelectionParser.ValueContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRepoKeyValuePair"):
                listener.enterRepoKeyValuePair(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRepoKeyValuePair"):
                listener.exitRepoKeyValuePair(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRepoKeyValuePair"):
                return visitor.visitRepoKeyValuePair(self)
            else:
                return visitor.visitChildren(self)

    class GroupKeyValuePairContext(KeyValueExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.KeyValueExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def GROUP(self):
            return self.getToken(AssetSelectionParser.GROUP, 0)

        def COLON(self):
            return self.getToken(AssetSelectionParser.COLON, 0)

        def value(self):
            return self.getTypedRuleContext(AssetSelectionParser.ValueContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterGroupKeyValuePair"):
                listener.enterGroupKeyValuePair(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitGroupKeyValuePair"):
                listener.exitGroupKeyValuePair(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitGroupKeyValuePair"):
                return visitor.visitGroupKeyValuePair(self)
            else:
                return visitor.visitChildren(self)

    class OwnerKeyValuePairContext(KeyValueExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.KeyValueExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OWNER(self):
            return self.getToken(AssetSelectionParser.OWNER, 0)

        def COLON(self):
            return self.getToken(AssetSelectionParser.COLON, 0)

        def value(self):
            return self.getTypedRuleContext(AssetSelectionParser.ValueContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterOwnerKeyValuePair"):
                listener.enterOwnerKeyValuePair(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitOwnerKeyValuePair"):
                listener.exitOwnerKeyValuePair(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOwnerKeyValuePair"):
                return visitor.visitOwnerKeyValuePair(self)
            else:
                return visitor.visitChildren(self)

    class TagKeyValuePairContext(KeyValueExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.KeyValueExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TAG(self):
            return self.getToken(AssetSelectionParser.TAG, 0)

        def COLON(self):
            return self.getToken(AssetSelectionParser.COLON, 0)

        def value(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(AssetSelectionParser.ValueContext)
            else:
                return self.getTypedRuleContext(AssetSelectionParser.ValueContext, i)

        def EQUAL(self):
            return self.getToken(AssetSelectionParser.EQUAL, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterTagKeyValuePair"):
                listener.enterTagKeyValuePair(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitTagKeyValuePair"):
                listener.exitTagKeyValuePair(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitTagKeyValuePair"):
                return visitor.visitTagKeyValuePair(self)
            else:
                return visitor.visitChildren(self)

    class KindKeyValuePairContext(KeyValueExprContext):
        def __init__(
            self, parser, ctx: ParserRuleContext
        ):  # actually a AssetSelectionParser.KeyValueExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def KIND(self):
            return self.getToken(AssetSelectionParser.KIND, 0)

        def COLON(self):
            return self.getToken(AssetSelectionParser.COLON, 0)

        def value(self):
            return self.getTypedRuleContext(AssetSelectionParser.ValueContext, 0)

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterKindKeyValuePair"):
                listener.enterKindKeyValuePair(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitKindKeyValuePair"):
                listener.exitKindKeyValuePair(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitKindKeyValuePair"):
                return visitor.visitKindKeyValuePair(self)
            else:
                return visitor.visitChildren(self)

    def keyValueExpr(self):
        localctx = AssetSelectionParser.KeyValueExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_keyValueExpr)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                localctx = AssetSelectionParser.TagKeyValuePairContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.match(AssetSelectionParser.TAG)
                self.state = 74
                self.match(AssetSelectionParser.COLON)
                self.state = 75
                self.value()
                self.state = 78
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input, 12, self._ctx)
                if la_ == 1:
                    self.state = 76
                    self.match(AssetSelectionParser.EQUAL)
                    self.state = 77
                    self.value()

                pass
            elif token in [11]:
                localctx = AssetSelectionParser.OwnerKeyValuePairContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.match(AssetSelectionParser.OWNER)
                self.state = 81
                self.match(AssetSelectionParser.COLON)
                self.state = 82
                self.value()
                pass
            elif token in [12]:
                localctx = AssetSelectionParser.GroupKeyValuePairContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.match(AssetSelectionParser.GROUP)
                self.state = 84
                self.match(AssetSelectionParser.COLON)
                self.state = 85
                self.value()
                pass
            elif token in [14]:
                localctx = AssetSelectionParser.KindKeyValuePairContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 86
                self.match(AssetSelectionParser.KIND)
                self.state = 87
                self.match(AssetSelectionParser.COLON)
                self.state = 88
                self.value()
                pass
            elif token in [15]:
                localctx = AssetSelectionParser.RepoKeyValuePairContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 89
                self.match(AssetSelectionParser.REPO)
                self.state = 90
                self.match(AssetSelectionParser.COLON)
                self.state = 91
                self.value()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ValueContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTED_STRING(self):
            return self.getToken(AssetSelectionParser.QUOTED_STRING, 0)

        def UNQUOTED_STRING(self):
            return self.getToken(AssetSelectionParser.UNQUOTED_STRING, 0)

        def getRuleIndex(self):
            return AssetSelectionParser.RULE_value

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterValue"):
                listener.enterValue(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitValue"):
                listener.exitValue(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitValue"):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)

    def value(self):
        localctx = AssetSelectionParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_value)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            _la = self._input.LA(1)
            if not (_la == 18 or _la == 19):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentsContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(self, parser, parent: ParserRuleContext = None, invokingState: int = -1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(AssetSelectionParser.ExprContext, 0)

        def getRuleIndex(self):
            return AssetSelectionParser.RULE_arguments

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterArguments"):
                listener.enterArguments(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitArguments"):
                listener.exitArguments(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitArguments"):
                return visitor.visitArguments(self)
            else:
                return visitor.visitChildren(self)
